Remove unneeded loops and add more tests

--- a/test/test.html
+++ b/test/test.html
@@ -24,6 +24,17 @@
             <label>Last Name</label>
             <input type="text" id="lastName" /><br />
 
+            <label>Gender</label>
+            <input type="radio" name="gender" value="Male"/> Male
+            <input type="radio" name="gender" value="Female"/> Female
+            <input type="radio" name="gender" value="Other"/> Other<br />
+
+            <label>Hobbies</label>
+            <input type="checkbox" name="hobbies" value="eat"/> Eat
+            <input type="checkbox" name="hobbies" value="drink"/> Drink
+            <input type="checkbox" name="hobbies" value="sleep"/> Sleep
+            <input type="checkbox" name="hobbies" value="repeat"/> Repeat <br />
+
             <input type="submit" value="Submit" />
         </form>
 
