Finish work around setAsDirty. Now also supports file input types

--- a/test/test.html
+++ b/test/test.html
@@ -35,6 +35,9 @@
             <input type="checkbox" name="hobbies" value="sleep"/> Sleep
             <input type="checkbox" name="hobbies" value="repeat"/> Repeat <br />
 
+            <label>File</label>
+            <input type="file" id="files" /><br />
+
             <input type="submit" value="Submit" />
         </form>
 
