Initial commit of demo page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="Jquery.dirty : A simple jquery plugin for checking if a form has been modified">
 
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <title>Jquery.dirty</title>
 </head>
@@ -15,7 +19,7 @@
 
   <!-- HEADER -->
   <div id="header_wrap" class="outer">
-    <header class="inner">
+    <header class="inner container">
       <a id="forkme_banner" href="https://github.com/simontaite/jquery.dirty">View on GitHub</a>
 
       <h1 id="project_title">Jquery.dirty</h1>
@@ -32,9 +36,9 @@
 
   <!-- MAIN CONTENT -->
   <div id="main_content_wrap" class="outer">
-    <section id="main_content" class="inner">
+    <section id="main_content" class="inner container">
       <h1>
-        <a id="jquerydirty" class="anchor" href="#jquerydirty" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>jquery.dirty</h1>
+        <a id="jquerydirty" class="anchor" href="#jquerydirty" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>jQuery.dirty</h1>
 
       <p>A jQuery plugin to determine when a form has been modified (dirtied) and act accordingly</p>
 
@@ -95,7 +99,7 @@
 
   <!-- FOOTER  -->
   <div id="footer_wrap" class="outer">
-    <footer class="inner">
+    <footer class="inner container">
       <p class="copyright">Jquery.dirty maintained by <a href="https://github.com/simontaite">simontaite</a></p>
       <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
     </footer>
