--- a/test/test.html
+++ b/test/test.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>jQuery.dirty tests</title>
-  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
+  <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="../bower_components/qunit/qunit/qunit.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
   <script src="../dist/jquery.dirty.js"></script>
-  <script src="test.js"></script>
+  <script src="./test.js"></script>
 
 
     <script type="text/template" id="formTemplate">
